# prime-utils

./: .dockerignore  Dockerfile  README.md  pyproject.toml  pyproject.toml.save
.github/workflows/: docker-build.yml  test.yaml
src/test_project/: main.py  pipeline.py  prime_functions.py
tests/: test_checksum.py  test_is_prime.py  test_pipeline .py  test_prime.py  test_primes.py
